--- a/src/Resources/app/administration/src/module/mollie-payments/components/mollie-pluginconfig-support-modal/mollie-pluginconfig-support-modal.scss
+++ b/src/Resources/app/administration/src/module/mollie-payments/components/mollie-pluginconfig-support-modal/mollie-pluginconfig-support-modal.scss
@@ -4,8 +4,6 @@
 
         dt, dd {
             border-bottom: none;
-
-
         }
 
         dt {
@@ -21,8 +19,16 @@
         }
     }
 
-    .sw-text-editor .sw-text-editor__content-editor p,
-    .sw-text-editor .sw-text-editor__content-editor div {
-        margin-top: 0;
+    .sw-text-editor .sw-text-editor__content-editor {
+        p {
+            margin-top: 0;
+            margin-bottom: 1em;
+        }
+
+        div {
+            margin-top: 0;
+        }
     }
 }
+
+
