Add different recipients based on locale

--- a/src/Resources/app/administration/src/module/mollie-payments/components/mollie-pluginconfig-support-modal/mollie-pluginconfig-support-modal.html.twig
+++ b/src/Resources/app/administration/src/module/mollie-payments/components/mollie-pluginconfig-support-modal/mollie-pluginconfig-support-modal.html.twig
@@ -17,7 +17,7 @@
                                 size="medium"/>
             </sw-container>
 
-            <sw-single-select v-model="recipient"
+            <sw-single-select v-model="recipientLocale"
                              label="Send request to"
                              :options="recipientOptions"
                              size="medium"/>
