--- a/src/Resources/app/administration/src/module/mollie-payments/components/mollie-pluginconfig-section-info/mollie-pluginconfig-section-info.html.twig
+++ b/src/Resources/app/administration/src/module/mollie-payments/components/mollie-pluginconfig-section-info/mollie-pluginconfig-section-info.html.twig
@@ -40,7 +40,7 @@
         </sw-button>
         <sw-button class="btn-action" @click="openSupport">
             <sw-icon name="default-communication-envelope"></sw-icon>
-            {{ $tc('mollie-payments.config.info.btnSupport') }}
+            {{ $tc('mollie-payments.config.info.btnRequestSupport') }}
         </sw-button>
         <sw-external-link class="link-troubleshooting"
                           :small="false" icon="small-arrow-small-external" rel="noopener"
