--- a/src/Resources/app/administration/src/module/mollie-payments/components/mollie-pluginconfig-support-modal/mollie-pluginconfig-support-modal.html.twig
+++ b/src/Resources/app/administration/src/module/mollie-payments/components/mollie-pluginconfig-support-modal/mollie-pluginconfig-support-modal.html.twig
@@ -1,58 +1,80 @@
 <sw-modal class="mollie-support-modal"
-          title="Hello"
           variant="large"
+          :title="$tc('mollie-payments.config.support.modalTitle')"
           @modal-close="$emit('close')">
 
-    <sw-container columns="10fr 4fr" gap="16px">
-        <sw-container gap="16px" columns="1fr" align="start">
-            <sw-container columns="1fr 1fr" gap="16px">
+    <sw-container class="mollie-support-modal__form"
+                  columns="10fr 4fr"
+                  gap="16px">
+        <sw-container columns="1fr"
+                      gap="16px"
+                      align="start">
+            <sw-container columns="1fr 1fr"
+                          gap="16px">
                 <sw-text-field v-model="name"
-                               label="Your name"
+                               :label="$tc('mollie-payments.config.support.form.name')"
                                :placeholder="userName"
                                size="medium"/>
 
                 <sw-email-field v-model="email"
-                                label="Your email"
+                                :label="$tc('mollie-payments.config.support.form.email')"
                                 :placeholder="user.email"
                                 size="medium"/>
             </sw-container>
 
             <sw-single-select v-model="recipientLocale"
-                             label="Send request to"
+                             :label="$tc('mollie-payments.config.support.form.recipient')"
                              :options="recipientOptions"
                              size="medium"/>
 
             <sw-text-field v-model="subject"
-                           label="Subject"
+                           :label="$tc('mollie-payments.config.support.form.subject')"
                            size="medium" />
 
             <sw-text-editor v-model="message"
-                            label="Message"/>
+                            :label="$tc('mollie-payments.config.support.form.message')"/>
         </sw-container>
 
-        <sw-description-list>
-            <dt>Collected data:</dt>
+        <sw-container rows="1fr auto auto"
+                      gap="16px">
+            <sw-description-list>
+                <dt>{{ $tc('mollie-payments.config.support.data.header') }}</dt>
 
-            <dt>Shopware version</dt>
-            <dd>{{ shopwareVersion }}</dd>
+                <dt>{{ $tc('mollie-payments.config.support.data.shopwareVersion') }}</dt>
+                <dd>{{ shopwareVersion }}</dd>
 
-            <template v-if="molliePlugin">
-                <dt>{{ molliePlugin.label }}</dt>
-                <dd>{{ mollieVersion }}</dd>
-            </template>
+                <template v-if="molliePlugin">
+                    <dt>{{ molliePlugin.label }}</dt>
+                    <dd>{{ mollieVersion }}</dd>
+                </template>
 
-            <dt>Other:</dt>
-            <dd v-if="molliePlugin">
-                {{ molliePlugin.label }} log files
-            </dd>
-            <dd v-if="molliePlugin">
-                {{ molliePlugin.label }} configuration
-                <sw-help-text text="API keys are excluded"/>
-            </dd>
+                <dt>{{ $tc('mollie-payments.config.support.data.other') }}</dt>
+                <dd v-if="molliePlugin">
+                    {{ $tc('mollie-payments.config.support.data.pluginLogs', 0, {
+                        plugin: molliePlugin.label
+                    }) }}
+                </dd>
+                <dd v-if="molliePlugin">
+                    {{ $tc('mollie-payments.config.support.data.pluginConfiguration', 0, {
+                        plugin: molliePlugin.label
+                    }) }}
+                    <sw-help-text :text="$tc('mollie-payments.config.support.data.pluginConfigurationHelpText')"/>
+                </dd>
 
 
-            <sw-loader v-if="isLoading"/>
-        </sw-description-list>
+                <sw-loader v-if="isLoading"/>
+            </sw-description-list>
+
+            <sw-button class="btn-action" link="https://github.com/mollie/Shopware6/wiki">
+                <sw-icon name="default-documentation-file"></sw-icon>
+                {{ $tc('mollie-payments.config.info.btnDocumentation') }}
+            </sw-button>
+
+            <sw-button class="btn-action" link="https://github.com/mollie/Shopware6/wiki/Support">
+                <sw-icon name="default-communication-speech-bubbles"></sw-icon>
+                {{ $tc('mollie-payments.config.info.btnSupport') }}
+            </sw-button>
+        </sw-container>
 
         <sw-loader v-if="isSubmitting"/>
     </sw-container>
@@ -61,7 +83,7 @@
         <sw-button size="small"
                    :isLoading="isSubmitting"
                    @click="$emit('close')">
-            Cancel
+            {{ $tc('mollie-payments.config.support.btnCancel') }}
         </sw-button>
 
         <sw-button-process size="small"
@@ -72,7 +94,7 @@
                            :processSuccess="mailSent"
                            @click="onRequestSupport"
                            @process-finish="mailSent = false">
-            Request support
+            {{ $tc('mollie-payments.config.support.btnConfirm') }}
         </sw-button-process>
     </template>
 </sw-modal>
