Remove bottom margin of last form element

--- a/src/Resources/app/administration/src/module/mollie-payments/components/mollie-pluginconfig-support-modal/mollie-pluginconfig-support-modal.scss
+++ b/src/Resources/app/administration/src/module/mollie-payments/components/mollie-pluginconfig-support-modal/mollie-pluginconfig-support-modal.scss
@@ -1,4 +1,10 @@
 .mollie-support-modal {
+    &__form {
+        & :last-child {
+            margin-bottom: 0;
+        }
+    }
+
     .sw-description-list {
         position: relative;
 
