--- a/src/Resources/app/administration/src/module/mollie-payments/extension/sw-order/component/sw-order-line-items-grid/sw-order-line-items-grid.scss
+++ b/src/Resources/app/administration/src/module/mollie-payments/extension/sw-order/component/sw-order-line-items-grid/sw-order-line-items-grid.scss
@@ -2,3 +2,9 @@
     padding: 10px 20px;
     height: 42px;
 }
+
+.mollie-modal-refund-manager {
+    .sw-modal__body {
+        padding: 0;
+    }
+}
