--- a/src/Resources/app/administration/src/module/sw-product/view/sw-product-detail-mollie/sw-product-detail-mollie.html.twig
+++ b/src/Resources/app/administration/src/module/sw-product/view/sw-product-detail-mollie/sw-product-detail-mollie.html.twig
@@ -1,32 +1,36 @@
-{% block sw_product_detail_mollie_vouchers %}
-    <sw-card :title="$tc('mollie-payments.vouchers.CARD_TITLE')">
-        <sw-container gap="0px 30px" class="sw-product-detail-mollie-vouchers-form__container">
+<div>
+    {% block sw_product_detail_mollie_vouchers %}
+        <sw-card :title="$tc('mollie-payments.vouchers.CARD_TITLE')">
+            <sw-container gap="0px 30px" class="sw-product-detail-mollie-vouchers-form__container">
 
-            <sw-container columns="1fr">
+                <sw-container columns="1fr">
                 <span class="sw-product-detail-mollie-vouchers__description-title">
                     {{ $tc('mollie-payments.vouchers.VOUCHER_INFO_TITLE') }}
                 </span>
-            </sw-container>
+                </sw-container>
 
-            <sw-container columns="1fr" class="sw-product-detail-mollie-vouchers__image-container">
-                <img class="sw-product-detail-mollie-vouchers__image" src="/bundles/molliepayments/administration/img/payment-voucher.svg">
-            </sw-container>
+                <sw-container columns="1fr" class="sw-product-detail-mollie-vouchers__image-container">
+                    <img class="sw-product-detail-mollie-vouchers__image"
+                         src="/bundles/molliepayments/administration/img/payment-voucher.svg">
+                </sw-container>
 
-            <sw-container columns="1fr">
-                <p class="sw-product-feature-set-form__description-body">
-                    {{ $tc('mollie-payments.vouchers.VOUCHER_INFO_DESCRIPTION') }}
-                </p>
-            </sw-container>
+                <sw-container columns="1fr">
+                    <p class="sw-product-feature-set-form__description-body">
+                        {{ $tc('mollie-payments.vouchers.VOUCHER_INFO_DESCRIPTION') }}
+                    </p>
+                </sw-container>
 
-            <sw-container columns="6fr 1fr">
-                <div></div>
-                <sw-button class="sw-product-detail-mollie-vouchers__button-readmore" :block="true" variant="primary" size="small" link="https://github.com/mollie/Shopware6/wiki/Voucher">
-                    {{ $tc('mollie-payments.vouchers.VOUCHER_BTN_READMORE') }}
-                </sw-button>
-            </sw-container>
+                <sw-container columns="6fr 1fr">
+                    <div></div>
+                    <sw-button class="sw-product-detail-mollie-vouchers__button-readmore" :block="true"
+                               variant="primary"
+                               size="small" link="https://github.com/mollie/Shopware6/wiki/Voucher">
+                        {{ $tc('mollie-payments.vouchers.VOUCHER_BTN_READMORE') }}
+                    </sw-button>
+                </sw-container>
 
-            <sw-container columns="1fr" v-if="isDefaultLanguage">
-                <sw-inherit-wrapper
+                <sw-container columns="1fr" v-if="isDefaultLanguage">
+                    <sw-inherit-wrapper
                         :label="$tc('mollie-payments.vouchers.VOUCHER_TYPE_CAPTION')"
                         v-model="productVoucherType"
                         :hasParent="hasParentProduct"
@@ -34,26 +38,30 @@
                         :customInheritationCheckFunction="checkInheritance"
                         :customRestoreInheritanceFunction="restoreInheritance"
                         :customRemoveInheritanceFunction="removeInheritance">
-                    <template #content="content">
-                        <sw-select-field
+                        <template #content="content">
+                            <sw-select-field
                                 class="mollie-voucher-type"
                                 :value="content.currentValue"
                                 :disabled="content.isInherited"
                                 @change="onVoucherChanged">
-                            <option v-for="type in voucherTypes" :key="type.key" :value="type.key">
-                                {{ type.name }}
-                            </option>
-                        </sw-select-field>
-                    </template>
-                </sw-inherit-wrapper>
-            </sw-container>
+                                <option v-for="type in voucherTypes" :key="type.key" :value="type.key">
+                                    {{ type.name }}
+                                </option>
+                            </sw-select-field>
+                        </template>
+                    </sw-inherit-wrapper>
+                </sw-container>
 
-            <sw-container columns="1fr" v-if="!isDefaultLanguage">
-                <sw-alert variant="default" :showIcon="true" :closable="false" class="sw-product-detail-mollie-vouchers__inheritance-warning">
-                    {{ $tc('mollie-payments.vouchers.VOUCHER_INFO_DEFAULTLANGUAGE') }}
-                </sw-alert>
-            </sw-container>
+                <sw-container columns="1fr" v-if="!isDefaultLanguage">
+                    <sw-alert variant="default" :showIcon="true" :closable="false"
+                              class="sw-product-detail-mollie-vouchers__inheritance-warning">
+                        {{ $tc('mollie-payments.vouchers.VOUCHER_INFO_DEFAULTLANGUAGE') }}
+                    </sw-alert>
+                </sw-container>
 
-        </sw-container>
-    </sw-card>
-{% endblock %}
+            </sw-container>
+        </sw-card>
+    {% endblock %}
+
+    <sw-product-mollie-subscription-config></sw-product-mollie-subscription-config>
+</div>
