--- a/src/Resources/views/storefront/component/buy-widget/buy-widget-form.html.twig
+++ b/src/Resources/views/storefront/component/buy-widget/buy-widget-form.html.twig
@@ -2,10 +2,8 @@
 
 {% block buy_widget_buy_container %}
 
-    {% if(config('MolliePayments.config.enableSubscriptions') and page.product.customFields.mollie_subscription.mollie_subscription_product) %}
-        <button class="btn btn-primary btn-block btn-buy"
-                title="{{ "mollie-subscriptions.product.addToCartText"|trans|sw_sanitize }}"
-                aria-label="{{ "mollie-subscriptions.product.addToCartText"|trans|sw_sanitize }}">
+    {% if mollie_subscriptions_enabled_beta and product.customFields.mollie_subscription.mollie_subscription_product %}
+        <button class="btn btn-primary btn-block btn-buy" title="{{ "mollie-subscriptions.product.addToCartText"|trans|sw_sanitize }}" aria-label="{{ "mollie-subscriptions.product.addToCartText"|trans|sw_sanitize }}">
             {{ "mollie-subscriptions.product.addToCartText"|trans|sw_sanitize }}
         </button>
     {% else %}
