--- a/src/Resources/app/administration/src/module/mollie-payments/components/mollie-pluginconfig-support-modal/mollie-pluginconfig-support-modal.scss
+++ b/src/Resources/app/administration/src/module/mollie-payments/components/mollie-pluginconfig-support-modal/mollie-pluginconfig-support-modal.scss
@@ -8,7 +8,8 @@
     .sw-description-list {
         position: relative;
 
-        dt, dd {
+        dt,
+        dd {
             border-bottom: none;
         }
 
@@ -36,5 +37,3 @@
         }
     }
 }
-
-
