--- a/src/Resources/app/storefront/src/scss/base.scss
+++ b/src/Resources/app/storefront/src/scss/base.scss
@@ -1,5 +1,5 @@
-@import '../mollie-payments/plugins/creditcard-components.plugin';
-@import '../mollie-payments/plugins/apple-pay-direct.plugin';
-@import './checkout/payment-selection';
-@import './account/payment-selection';
-@import './account/subscriptions';
+@import "../mollie-payments/plugins/creditcard-components.plugin";
+@import "../mollie-payments/plugins/apple-pay-direct.plugin";
+@import "./checkout/payment-selection";
+@import "./account/payment-selection";
+@import "./account/subscriptions";
