--- a/src/Resources/views/storefront/page/checkout/address/register.html.twig
+++ b/src/Resources/views/storefront/page/checkout/address/register.html.twig
@@ -1,43 +1,20 @@
-{% sw_extends '@Storefront/storefront/component/account/register.html.twig' %}
+{% sw_extends '@Storefront/storefront/page/checkout/address/register.html.twig' %}
 
-{% block component_account_register_personal_account_fields %}
-    {% set isMollieSubscription = false %}
-    {% for element in page.cart.data.elements %}
-        {% if(element._entityName == "product" and element.customFields.mollie_payments.subscription_product) %}
-            {% set isMollieSubscription = true %}
-        {% endif %}
-    {% endfor %}
 
-    {% if(isMollieSubscription == false) %}
-        {% block page_checkout_register_personal_guest %}
-            <div class="custom-control custom-checkbox register-guest-control">
-                {% block page_checkout_register_personal_guest_input %}
-                    <input type="checkbox"
-                           class="custom-control-input"
-                           name="guest"
-                           value="1"
-                           id="personalGuest"
-                           {% if data.get('guest') %}checked="checked"{% endif %}
-                           data-form-field-toggle="true"
-                           data-form-field-toggle-target=".js-form-field-toggle-guest-mode"
-                           data-form-field-toggle-value="false">
-                {% endblock %}
+ {% block page_checkout_register_personal_guest %}
 
-                {% block page_checkout_register_personal_guest_label %}
-                    <label class="custom-control-label"
-                           for="personalGuest">
-                        {{ "checkout.registerGuestmodeLabel"|trans|sw_sanitize }}
-                    </label>
-                {% endblock %}
-            </div>
-        {% endblock %}
-    {% endif %}
+     {% set isMollieSubscription = false %}
+     {% for element in page.cart.data.elements %}
+         {% if(element._entityName == "product" and element.customFields.mollie_payments.subscription_product) %}
+             {% set isMollieSubscription = true %}
+         {% endif %}
+     {% endfor %}
 
-    {{ parent() }}
-{% endblock %}
+     {% if(isMollieSubscription == true) %}
+         {# we must require a registration, so hide the "do not create customer" checkbox #}
+     {% else %}
+         {{ parent() }}
+     {% endif %}
 
-{% block component_account_register_form_action %}
-    <input type="hidden"
-           name="errorRoute"
-           value="frontend.checkout.register.page"/>
-{% endblock %}
+ {% endblock %}
+
